GNOME Bugzilla – Bug 677124
gi: Support zero-terminated arrays with length arguments
Last modified: 2012-05-30 21:28:16 UTC
This adds support for something like GLib.KeyFile.set_string_list
Created attachment 215281 [details] [review] gi: Support zero-terminated arrays with length arguments Sometimes, you may see (array zero-terminated=1 length=length) annotations. Don't expose the length argument to the user in this case.
Review of attachment 215281 [details] [review]: are those new g-i functions? If yes, we should probably bump the g-i requirement. Apart from that the patch looks good to me
Review of attachment 215281 [details] [review]: Are what functions new?
ignore me, I misread the patch... I should not look at thes at 23 pm anyway it still it is ok to commit for me
Attachment 215281 [details] pushed as 274d60a - gi: Support zero-terminated arrays with length arguments