gi: Support zero-terminated arrays with length arguments

Sometimes, you may see (array zero-terminated=1 length=length) annotations.
Don't expose the length argument to the user in this case.

https://bugzilla.gnome.org/show_bug.cgi?id=677124